feature: added more blogs

--- a/blog.html
+++ b/blog.html
@@ -1,52 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bishal Dhimal - Blog</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bishal Dhimal - Blog</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<header>
-  <h1>BISHAL&nbsp;DHIMAL</h1>
-  <p class="subtitle">Cloud Engineer | DevOps & SRE Enthusiast</p>
-  <nav class="nav-bar">
-    <a href="index.html">Home</a> |
-    <a href="cv.html">CV</a> |
-    <a href="blog.html">Blog</a> |
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <h1>BISHAL&nbsp;DHIMAL</h1>
+      <p class="subtitle">Cloud Engineer | DevOps & SRE Enthusiast</p>
+      <p class="contact">
+        Naya-Thimi, Bhaktapur | +977 9804376673 |
+        <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a>
+      </p>
+      <p class="contact">
+        <a href="https://www.linkedin.com/in/bishaldevops/">LinkedIn</a> |
+        <a href="https://github.com/bishaldml">GitHub</a> |
+        <a
+          href="https://www.credly.com/users/bishal-dhimal.7e440a24/badges#credly"
+          >Certifications</a
+        >
+      </p>
+      <nav class="nav-bar">
+        <a href="index.html">Home</a> | <a href="cv.html">CV</a> |
+        <a href="blog.html">Blog</a> |
+        <a href="contact.html">Contact</a>
+      </nav>
+    </header>
 
-<section>
-  <h2>Blog</h2>
+    <section class="blog-section">
+      <div class="container">
+        <h2>Blog</h2>
 
-  <article>
-    <h3>Deploying Docker Applications on AWS ECS</h3>
-    <p><em>Dec 2025</em></p>
-    <p>Step-by-step guide on deploying containerized apps using AWS ECS, Fargate, and CI/CD pipelines.</p>
-    <a href="#">Read More</a>
-  </article>
+        <!-- New Blog: AWS Cost Optimization -->
+        <article class="blog-card">
+          <h3>AWS Cost Optimization: Key Strategies</h3>
+          <p><em>Dec 2025</em></p>
+          <p>
+            A comprehensive guide to optimizing AWS costs efficiently. Learn how
+            to review billing, identify high-cost services, right-size
+            resources, optimize RDS, leverage Auto Scaling & Spot Instances, and
+            implement best practices for cloud cost management.
+          </p>
+          <a href="blog-aws-cost-optimization.html">Read Full Guide →</a>
+        </article>
 
-  <article>
-    <h3>Implementing CI/CD with Jenkins & Terraform</h3>
-    <p><em>Nov 2025</em></p>
-    <p>Automated infrastructure deployment and app release using Jenkins and Terraform.</p>
-    <a href="#">Read More</a>
-  </article>
+        <!-- New Blog: EC2 Monitoring Alerts -->
+        <article class="blog-card">
+          <h3>EC2 Alerts: EBS & CPU Usage Monitoring</h3>
+          <p><em>Dec 2025</em></p>
+          <p>
+            Step-by-step guide to send alerts when EBS volume or CPU usage
+            reaches 80% on EC2 instances using CloudWatch, SNS, and optional
+            automation with AWS SSM.
+          </p>
+          <a href="blog-ec2-monitoring.html">Read Full Guide →</a>
+        </article>
 
-</section>
+        <!-- New Blog: AWS Database Migration Service -->
+        <article class="blog-card">
+          <h3>AWS Database Migration Service (DMS): Production-Ready Guide</h3>
+          <p><em>Dec 2025</em></p>
+          <p>
+            Learn how to migrate your databases using AWS DMS with step-by-step
+            instructions, schema/code migration guidance, endpoint setup,
+            replication tasks, and best practices for production environments.
+          </p>
+          <a href="blog-dms-database-migration.html">Read More</a>
+        </article>
 
-<footer>
-  <p>&copy; 2025 Bishal Dhimal | <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a></p>
-</footer>
+        <!-- Blog 4: AWS DMS Database Migration -->
+        <article
+          class="blog-card"
+          style="
+            background: #fff;
+            padding: 25px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+          "
+        >
+          <h3>AWS DMS: Database Migration Service</h3>
+          <p><em>Dec 2025</em></p>
+          <p>
+            Step-by-step guide on planning, configuring, and executing database
+            migrations using AWS DMS including schema conversion and replication
+            tasks.
+          </p>
+          <a
+            href="blog-aws-dms-migration.html"
+            style="color: #0077cc; font-weight: bold; text-decoration: none"
+            >Read More →</a
+          >
+        </article>
 
-<script>
-document.addEventListener('contextmenu', e => { e.preventDefault(); alert("Right-click is disabled on this website."); });
-document.addEventListener('keydown', e => { if(e.ctrlKey && ['c','C','s','S','u','U'].includes(e.key)){ e.preventDefault(); alert("Keyboard shortcuts are disabled on this website."); } });
-document.addEventListener('dragstart', e => e.preventDefault());
-</script>
+        <article class="blog-card">
+          <h3>Deploying Docker Applications on AWS ECS</h3>
+          <p><em>Dec 2025</em></p>
+          <p>
+            Step-by-step guide on deploying containerized apps using AWS ECS,
+            Fargate, and CI/CD pipelines.
+          </p>
+          <a href="#">Read More</a>
+        </article>
 
-</body>
+        <article class="blog-card">
+          <h3>Implementing CI/CD with Jenkins & Terraform</h3>
+          <p><em>Nov 2025</em></p>
+          <p>
+            Automated infrastructure deployment and app release using Jenkins
+            and Terraform.
+          </p>
+          <a href="#">Read More</a>
+        </article>
+      </div>
+    </section>
+
+    <footer>
+      <p>
+        &copy; 2025 Bishal Dhimal |
+        <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a>
+      </p>
+    </footer>
+
+    <script>
+      document.addEventListener("contextmenu", (e) => {
+        e.preventDefault();
+        alert("Right-click is disabled on this website.");
+      });
+      document.addEventListener("keydown", (e) => {
+        if (e.ctrlKey && ["c", "C", "s", "S", "u", "U"].includes(e.key)) {
+          e.preventDefault();
+          alert("Keyboard shortcuts are disabled on this website.");
+        }
+      });
+      document.addEventListener("dragstart", (e) => e.preventDefault());
+    </script>
+  </body>
 </html>
