--- a/contact.html
+++ b/contact.html
@@ -1,54 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bishal Dhimal - Contact</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bishal Dhimal - Contact</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <h1>BISHAL&nbsp;DHIMAL</h1>
+      <p class="subtitle">Cloud Engineer | DevOps & SRE Enthusiast</p>
+      <p class="contact">
+        Naya-Thimi, Bhaktapur | +977 9804376673 |
+        <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a>
+      </p>
+      <p class="contact">
+        <a href="https://www.linkedin.com/in/bishaldevops/">LinkedIn</a> |
+        <a href="https://github.com/bishaldml">GitHub</a> |
+        <a
+          href="https://www.credly.com/users/bishal-dhimal.7e440a24/badges#credly"
+          >Certifications</a
+        >
+      </p>
+      <nav class="nav-bar">
+        <a href="index.html">Home</a> | <a href="cv.html">CV</a> |
+        <a href="blog.html">Blog</a> |
+        <a href="contact.html">Contact</a>
+      </nav>
+    </header>
 
-<header>
-  <h1>BISHAL&nbsp;DHIMAL</h1>
-  <p class="subtitle">Cloud Engineer | DevOps & SRE Enthusiast</p>
-  <nav class="nav-bar">
-    <a href="index.html">Home</a> |
-    <a href="cv.html">CV</a> |
-    <a href="blog.html">Blog</a> |
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+    <section>
+      <h2>Contact Me</h2>
+      <form id="contact-form">
+        <label>Name</label><br />
+        <input type="text" name="name" required /><br /><br />
 
-<section>
-  <h2>Contact Me</h2>
-  <form id="contact-form">
-    <label>Name</label><br>
-    <input type="text" name="name" required><br><br>
+        <label>Email</label><br />
+        <input type="email" name="email" required /><br /><br />
 
-    <label>Email</label><br>
-    <input type="email" name="email" required><br><br>
+        <label>Message</label><br />
+        <textarea name="message" rows="5" required></textarea><br /><br />
 
-    <label>Message</label><br>
-    <textarea name="message" rows="5" required></textarea><br><br>
+        <button type="submit">Send Message</button>
+      </form>
+    </section>
 
-    <button type="submit">Send Message</button>
-  </form>
-</section>
+    <footer>
+      <p>
+        &copy; 2025 Bishal Dhimal |
+        <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a>
+      </p>
+    </footer>
 
-<footer>
-  <p>&copy; 2025 Bishal Dhimal | <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a></p>
-</footer>
+    <script>
+      document
+        .getElementById("contact-form")
+        .addEventListener("submit", function (e) {
+          e.preventDefault();
+          alert("Thank you! Message sent successfully.");
+        });
 
-<script>
-document.getElementById('contact-form').addEventListener('submit', function(e){
-  e.preventDefault();
-  alert("Thank you! Message sent successfully (demo).");
-});
-
-document.addEventListener('contextmenu', e => { e.preventDefault(); alert("Right-click is disabled on this website."); });
-document.addEventListener('keydown', e => { if(e.ctrlKey && ['c','C','s','S','u','U'].includes(e.key)){ e.preventDefault(); alert("Keyboard shortcuts are disabled on this website."); } });
-document.addEventListener('dragstart', e => e.preventDefault());
-</script>
-
-</body>
+      document.addEventListener("contextmenu", (e) => {
+        e.preventDefault();
+        alert("Right-click is disabled on this website.");
+      });
+      document.addEventListener("keydown", (e) => {
+        if (e.ctrlKey && ["c", "C", "s", "S", "u", "U"].includes(e.key)) {
+          e.preventDefault();
+          alert("Keyboard shortcuts are disabled on this website.");
+        }
+      });
+      document.addEventListener("dragstart", (e) => e.preventDefault());
+    </script>
+  </body>
 </html>
