--- a/cv.html
+++ b/cv.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 
+<!-- HEADER -->
 <header>
   <h1>BISHAL&nbsp;DHIMAL</h1>
   <p class="subtitle">Cloud Engineer | DevOps & SRE Enthusiast</p>
-  <p class="contact">Naya-Thimi, Bhaktapur | 9804376673 | <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a></p>
+  <p class="contact">Naya-Thimi, Bhaktapur | +977 9804376673 | <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a></p>
+  <p class="contact">
+    <a href="https://www.linkedin.com/in/bishaldevops/">LinkedIn</a> |
+    <a href="https://github.com/bishaldml">GitHub</a> |
+    <a href="https://www.credly.com/users/bishal-dhimal.7e440a24/badges#credly">Certifications</a>
+  </p>
   <nav class="nav-bar">
     <a href="index.html">Home</a> |
     <a href="cv.html">CV</a> |
