--- a/index.html
+++ b/index.html
@@ -1,94 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bishal Dhimal - Cloud & DevOps Portfolio</title>
-  <meta name="description" content="Portfolio of Bishal Dhimal, Cloud Engineer & DevOps enthusiast. Explore projects, certifications, achievements, and contact information.">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bishal Dhimal - Cloud & DevOps Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio of Bishal Dhimal, Cloud Engineer & DevOps enthusiast. Explore projects, certifications, achievements, and contact information."
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <h1>BISHAL&nbsp;DHIMAL</h1>
+      <p class="subtitle">Cloud Engineer | DevOps & SRE Enthusiast</p>
+      <p class="contact">
+        Naya-Thimi, Bhaktapur | +977 9804376673 |
+        <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a>
+      </p>
+      <p class="contact">
+        <a href="https://www.linkedin.com/in/bishaldevops/">LinkedIn</a> |
+        <a href="https://github.com/bishaldml">GitHub</a> |
+        <a
+          href="https://www.credly.com/users/bishal-dhimal.7e440a24/badges#credly"
+          >Certifications</a
+        >
+      </p>
+      <nav class="nav-bar">
+        <a href="index.html">Home</a> | <a href="cv.html">CV</a> |
+        <a href="blog.html">Blog</a> |
+        <a href="contact.html">Contact</a>
+      </nav>
+    </header>
 
-<!-- HEADER -->
-<header>
-  <h1>BISHAL&nbsp;DHIMAL</h1>
-  <p class="subtitle">Cloud Engineer | DevOps & SRE Enthusiast</p>
-  <p class="contact">Naya-Thimi, Bhaktapur | 9804376673 | <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a></p>
-  <p class="contact">
-    <a href="https://www.linkedin.com/in/bishaldevops/">LinkedIn</a> |
-    <a href="https://github.com/bishaldml">GitHub</a> |
-    <a href="cv.html">CV</a>
-  </p>
-  <nav class="nav-bar">
-    <a href="index.html">Home</a> |
-    <a href="cv.html">CV</a> |
-    <a href="blog.html">Blog</a> |
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+    <!-- PROFILE -->
+    <section>
+      <h2>About Me</h2>
+      <p>
+        As a motivated Cloud and DevOps enthusiast, I am currently on a journey
+        of continuous learning, focusing on optimizing systems, improving
+        workflows, and automating processes. I am building my expertise across
+        cloud platforms like AWS, Google Cloud, and Microsoft Azure, while
+        developing skills in containerization, CI/CD pipelines, and
+        Infrastructure as Code (IaC).
+        <br />
+        <br />
+        I enjoy tackling challenges in troubleshooting and optimizing cloud
+        infrastructure, and I am eager to deepen my knowledge of automating
+        development processes. My curiosity, problem-solving mindset, and
+        commitment to continuous improvement drive me to grow in the dynamic
+        field of Cloud and DevOps.
+      </p>
+    </section>
 
-<!-- PROFILE -->
-<section>
-  <h2>About Me</h2>
-  <p>Motivated Cloud Engineer and DevOps/SRE enthusiast experienced with AWS, GCP, CI/CD, Docker, Kubernetes, Terraform, and infrastructure automation. Passionate about building scalable, reliable, and secure cloud solutions.</p>
-</section>
+    <!-- CERTIFICATIONS -->
+    <section>
+      <h2>
+        <a
+          href="https://www.credly.com/users/bishal-dhimal.7e440a24/badges#credly"
+          >Certifications</a
+        >
+      </h2>
+      <ul>
+        <li>AWS Certified DevOps Engineer – Professional</li>
+        <li>Google Cloud Professional Cloud Engineer</li>
+        <li>Google Cloud Professional DevOps Engineer</li>
+        <li>Microsoft Certified: Azure Administrator Associate</li>
+      </ul>
+    </section>
 
-<!-- CERTIFICATIONS -->
-<section>
-  <h2>Certifications</h2>
-  <ul>
-    <li>AWS Certified Solutions Architect – Associate</li>
-    <li>Google Cloud Professional Cloud Engineer</li>
-    <li>Terraform Associate Certification</li>
-    <li>Jenkins Certified Engineer</li>
-  </ul>
-</section>
+    <!-- ACHIEVEMENTS
+    <section>
+      <h2>Achievements</h2>
+      <ul>
+        <li>
+          Implemented fully automated CI/CD pipelines for multiple clients in
+          AWS and GCP.
+        </li>
+        <li>
+          Migrated legacy infrastructure to cloud platforms, optimizing costs by
+          20%.
+        </li>
+        <li>
+          Built containerized applications with Kubernetes on GKE and AWS ECS.
+        </li>
+        <!-- <li>Delivered multiple cloud workshops and internal DevOps trainings.</li> -->
+      </ul>
+    </section> 
 
-<!-- ACHIEVEMENTS -->
-<section>
-  <h2>Achievements</h2>
-  <ul>
-    <li>Implemented fully automated CI/CD pipelines for multiple clients in AWS and GCP.</li>
-    <li>Migrated legacy infrastructure to cloud platforms, optimizing costs by 20%.</li>
-    <li>Built containerized applications with Kubernetes on GKE and AWS ECS.</li>
-    <li>Delivered multiple cloud workshops and internal DevOps trainings.</li>
-  </ul>
-</section>
+    <!-- SKILLS -->
+    <section>
+      <h2>Technical Skills</h2>
+      <ul>
+        <li>Cloud: AWS, GCP and Azure</li>
+        <li>
+          DevOps Tools: Jenkins, Terraform, Docker, Kubernetes, GitHubActions
+        </li>
+        <li>Programming: Python, Bash</li>
+        <li>Monitoring & Logging: CloudWatch</li>
+        <!-- <li>CI/CD & Automation: Jenkins, GitHub Actions, Cloud Build</li> -->
+      </ul>
+    </section>
 
-<!-- SKILLS -->
-<section>
-  <h2>Technical Skills</h2>
-  <ul>
-    <li>Cloud: AWS (EC2, ECS, S3, Lambda), GCP (Compute Engine, GKE, Cloud Storage)</li>
-    <li>DevOps Tools: Jenkins, Terraform, Docker, Kubernetes, GitOps</li>
-    <li>Programming: Python, Bash</li>
-    <li>Monitoring & Logging: CloudWatch, Stackdriver, Prometheus</li>
-    <li>CI/CD & Automation: Jenkins, GitHub Actions, Cloud Build</li>
-  </ul>
-</section>
+    <!-- PROJECTS -->
+    <section>
+      <h2>Highlighted Projects</h2>
+      <ul>
+        <li>
+          Automated Dockerized applications deployment on AWS ECS Fargate with
+          CI/CD pipelines.
+        </li>
+        <li>
+          Terraform-based infrastructure provisioning for multi-environment
+          cloud projects.
+        </li>
 
-<!-- PROJECTS -->
-<section>
-  <h2>Highlighted Projects</h2>
-  <ul>
-    <li>Automated Dockerized applications deployment on AWS ECS Fargate with CI/CD pipelines.</li>
-    <li>Terraform-based infrastructure provisioning for multi-environment cloud projects.</li>
-    <li>CI/CD pipelines for Kubernetes deployments on GKE using GitOps principles.</li>
-    <li>Monitoring & logging setup using Prometheus and CloudWatch for production workloads.</li>
-  </ul>
-</section>
+        <li>
+          Monitor and analyze AWS cost and usage for client organizations using
+          AWS CUR and Cost Explorer, generating monthly reports with actionable
+          insights for cost optimization.
+        </li>
 
-<!-- FOOTER -->
-<footer>
-  <p>&copy; 2025 Bishal Dhimal | <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a></p>
-</footer>
+        <li>
+          Provide onboarding support for new AWS customers, including basic
+          training on AWS services, billing, and best practices.
+        </li>
 
-<!-- Copy protection JS -->
-<script>
-document.addEventListener('contextmenu', e => { e.preventDefault(); alert("Right-click is disabled on this website."); });
-document.addEventListener('keydown', e => { if(e.ctrlKey && ['c','C','s','S','u','U'].includes(e.key)){ e.preventDefault(); alert("Keyboard shortcuts are disabled on this website."); } });
-document.addEventListener('dragstart', e => e.preventDefault());
-</script>
+        <li>
+          Assist client teams in infrastructure deployment and migration to AWS,
+          ensuring alignment with scalability, security, and reliability
+          standards.
+        </li>
 
-</body>
+        <li>
+          Support CI/CD pipeline setup using tools like Jenkins and CodePipeline
+          to automate application deployment.
+        </li>
+
+        <li>
+          Conduct research and prototype solutions to address unique client
+          requirements and improve operational efficiency.
+        </li>
+
+        <li>
+          Collaborate with internal and client-side teams for continuous
+          improvements in cloud performance, cost control, and architecture
+          design.
+        </li>
+      </ul>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+      <p>
+        &copy; 2025 Bishal Dhimal |
+        <a href="mailto:bishaldhimal321@gmail.com">bishaldhimal321@gmail.com</a>
+      </p>
+    </footer>
+
+    <!-- Copy protection JS -->
+    <script>
+      document.addEventListener("contextmenu", (e) => {
+        e.preventDefault();
+        alert("Right-click is disabled on this website.");
+      });
+      document.addEventListener("keydown", (e) => {
+        if (e.ctrlKey && ["c", "C", "s", "S", "u", "U"].includes(e.key)) {
+          e.preventDefault();
+          alert("Keyboard shortcuts are disabled on this website.");
+        }
+      });
+      document.addEventListener("dragstart", (e) => e.preventDefault());
+    </script>
+  </body>
 </html>
